# authsmith

./: .gitignore  Cargo.toml  authsmith.config.schema.json
crates/authsmith-build/: Cargo.toml
crates/authsmith-core/: Cargo.toml
crates/authsmith-macros/: Cargo.toml
examples/authsmith_demo/: .authsmith.json  Cargo.toml  build.rs  package.json  pnpm-lock.yaml  vite.config.ts
examples/authsmith_demo/.cargo/: config.toml
examples/authsmith_demo/src-actix/: lib.rs  main.rs
examples/authsmith_demo/src-actix/util/: asset_endpoint.rs
examples/authsmith_demo/src/providers/: ThemeProvider.tsx
